feat(import): Add library reimport support
